--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
 }
 .about{
     /* display: flex; */
-    background-image: url("Untitled\ design.png");
+    background-image: url("19201080 (1).png");
     height: auto;
     background-size: cover;
     background-repeat: no-repeat;
